# AFF

./: .gitignore  AGENTS.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  package-lock.json  skills-lock.json
.codex/: codex_rules.md  config.toml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_purpose.md  style_and_conventions.md  suggested_commands.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
api/: openapi.yaml
clients/app/: .env.example  README.md  app.json  package.json  (+4 more)
codex/: rules.md  skills.yaml
docs/: ARCHITECTURE.md  PROJECT.md
infra/: package-lock.json  package.json  tsconfig.json
schemas/: schema.sql
scripts/: deploy.sh
services/api/: Dockerfile  agent_contracts.py  alembic.ini  app_factory.py  constants.py  core.py  database.py  dependencies.py  entities.py  event_ingestion.py  event_ingestion_impl.py  logic.py  main.py  models.py  pyproject.toml  routes_admin.py  routes_public.py  run_ingestion_job.py  source_discovery.py  state.py  storage_service.py
services/api/alembic/: env.py  script.py.mako
services/api/alembic/versions/: 0001_initial_schema.py  0002_preference_home_location.py
services/api/core/: settings.py
services/api/tests/: conftest.py  test_agents.py  test_api.py  test_contract_and_perf.py  test_event_ingestion.py
spec/: 00_INDEX.md  01_PRODUCT.md  10_ARCHITECTURE.md  11_DATA_MODEL.md  12_PIPELINE.md  13_DEDUP.md  14_RANKING.md  15_NOTIFICATIONS.md  16_SECURITY.md  21_INFRA.md  22_CODEX.md
(+81 files in other folders)
