[project]
name = "aff-api"
version = "0.1.0"
description = "AFF API service"
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "psycopg2-binary",
  "sqlalchemy",
  "greenlet",
  "asyncpg",
  "aiosqlite",
  "alembic",
  "pydantic-ai-slim[logfire,mcp,openai]>=1.63.0",
  "pydantic",
  "pydantic-settings",
]

[dependency-groups]
dev = [
  "pytest",
  "httpx",
  "ruff",
  "pyrefly",
]

[tool.ruff]
line-length = 100
target-version = "py311"
